<resources>
    <string name="app_name">POCKET PAL</string>
    <string name="txtTitle">My Bills</string>
    <string name="tvTitle">My Bills</string>
    <string name="tvMonth">Month</string>
    <string name="edtMonth">March</string>
    <string name="tvUpcoming">Upcoming bills Amount</string>
    <string name="edtUpcoming">Rs.xxxx.xx</string>
    <string name="tvPaid">Paid Bills Amount</string>
    <string name="edtPaid">Rs,xxxx.xx</string>
    <string name="btnAdd">Add Bill</string>
    <string name="btnUpcoming">View Upcoming Bills</string>
    <string name="btnPaid">View Paid Bills</string>
    <string name="txtAdd">Add Bill</string>
    <string name="txtAmount">Amount Due</string>
    <string name="edtAmount">Enter Amount</string>
    <string name="tvCategory">Category</string>
    <string name="edtCategory">Select Category</string>
    <string name="txtDue">Due Date</string>
    <string name="edtDate">Select Due Date</string>
    <string name="btn_Add">Save Bill</string>
    <string name="textUpcoming">Upcoming Bills</string>
    <string name="txtMonth">May</string>
    <string name="txtTotal">Rs.xxxx.xx</string>
    <string name="edtbill1">Electri City Bill</string>
    <string name="edttotal1">Rs. xxx.xx</string>
    <string name="edtBill2">Water Bill</string>
    <string name="edtTotal2">Rs.xxxx.xx</string>
    <string name="edtBill3">Mobile Bill</string>
    <string name="edtTotal3">Rs.xxxx.xx</string>
    <string name="btnDelete">Delete</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDone">Paid</string>
    <string name="txtbill1">Electricity Bill</string>
    <string name="txtAmount1">Rs.xxxx.xx</string>
    <string name="txtBill2">Water Bill</string>
    <string name="txtAmount2">Rs.xxxx.xx</string>
    <string name="txtPaid">Paid Bills</string>
    <string name="txMonth">May</string>
    <string name="txAmount">Rs.xxxx.xx</string>
    <string name="btDelete">Delete</string>
    <string name="txPaidbill1">Mobile Phone Bill</string>
    <string name="edtPaidbill">Rs.xxxx.xx</string>
    <string name="txPaidBill2">Gas Bill</string>
    <string name="tvUpdate">Update Bills</string>
    <string name="uAmount">Amount Due</string>
    <string name="edtTxtAmount">Rs.xxxx.xx</string>
    <string name="uCategory">Category</string>
    <string name="edtTxtCategory">Water Bill</string>
    <string name="uDueDate">Due Date</string>
    <string name="edtTxtDate">2023-03-08</string>
    <string name="btnUupdate">Update Bill</string>
    <string name="tvMyProfile">My Profile</string>
    <string name="txtMname">Name : </string>
    <string name="edtMname">Amal Perera</string>
    <string name="edtMemail">amal@gmail.com</string>
    <string name="txtMemail">Email : </string>
    <string name="btnMview">View Dashbord</string>
    <string name="btnMupadte">Update Profile</string>
    <string name="tvUpdateprofile">Update Profile</string>
    <string name="btnUpupdate">Update</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnMyBudget" />
    <string name="btnMyBills" />
    <string name="btnMyGoals" />
    <string name="tvNews2" />
    <string name="tvNews3" />
    <string name="tvNews1" />
    <string name="btnMoreNews" />
    <string name="btnMyCredits" />
</resources>