<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_text"
    tools:context=".UpdateMyProfile">

    <View
        android:id="@+id/view6"
        android:layout_width="411dp"
        android:layout_height="203dp"
        android:background="@color/background_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="412dp"
        android:layout_height="106dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtProfile"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:background="@color/background_text"
        android:text="@string/tvUpdateprofile"
        android:textAlignment="center"
        android:textColor="@color/background_main"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_height="98dp"
        android:layout_marginTop="120dp"
        android:background="@color/background_text"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <androidx.cardview.widget.CardView
        android:layout_width="333dp"
        android:layout_height="304dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/btnColor"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.381">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_marginTop="40dp">

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/txtMname"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextTextPersonName11"
                    android:layout_width="189dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/baseline_edit_24"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/edtMname"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="63dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/txtMemail"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextTextPersonName12"
                    android:layout_width="170dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/baseline_edit_24"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/edtMemail"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:layout_marginTop="200dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:backgroundTint="@color/background_main"
                android:text="@string/btnUpupdate"
                android:textColor="@color/background_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="18dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>