<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_text"
    tools:context=".profile"
    tools:layout_editor_absoluteX="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view6"
            android:layout_width="@dimen/view_layout_width"
            android:layout_height="@dimen/view_layout_height"
            android:background="@color/background_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view4"
            android:layout_width="@dimen/view_width"
            android:layout_height="@dimen/view_height"
            android:layout_marginTop="@dimen/view_top"
            android:background="@drawable/wave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtProfile"
            android:layout_width="@dimen/txtProfile_layoutHeight"
            android:layout_height="@dimen/txtProfile_layoutwidth"
            android:layout_marginTop="@dimen/txtProfile_layout_margintop"
            android:background="@color/background_text"
            android:text="@string/tvMyProfile"
            android:textAlignment="center"
            android:textColor="@color/background_main"
            android:textSize="@dimen/txtProfile_textSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view6" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/image_view_layout_width"
            android:layout_height="@dimen/image_view_layout_height"
            android:layout_marginTop="116dp"
            android:background="@color/background_text"
            app:layout_constraintEnd_toEndOf="@+id/view6"
            app:layout_constraintStart_toStartOf="@+id/view6"
            app:layout_constraintTop_toTopOf="@+id/view6"
            app:srcCompat="@drawable/baseline_account_circle_24" />

        <androidx.cardview.widget.CardView
            android:layout_width="322dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/btnColor"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.381">

            <Button
                android:id="@+id/logoutBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:backgroundTint="@color/background_main"
                android:text="LOG OUT"
                android:textColor="@color/background_text"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="101dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/txtMemail"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextTextPersonName12"
                    android:layout_width="170dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/edtMemail"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:layout_marginTop="200dp"
                android:orientation="vertical">

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>